Add booth registration button

--- a/src/less/hero.less
+++ b/src/less/hero.less
@@ -13,7 +13,7 @@
     padding: 0;
     text-align: left;
   }
-  button { margin: 50px 0; }
+  .btn { margin: 50px 0; }
   h1 {
     margin: 100px 0 50px;
     font-size: 5rem;
