--- a/src/less/buttons.less
+++ b/src/less/buttons.less
@@ -1,16 +1,25 @@
 button,
-.button {
+.btn {
   display: inline-block;
-  height: 36px;
-  padding: 0 20px;
-  font-size: 1.2rem;
-  font-weight: 600;
+  position: relative;
+  height: 34px;
+  padding: 0 1.875rem;
+  font-size: 12px;
+  font-weight: 400;
   letter-spacing: 2px;
+  line-height: 34px;
+  text-align: center;
+  text-decoration: none;
+  text-indent: 0.25em;
   text-transform: uppercase;
+  vertical-align: middle;
   white-space: nowrap;
   background: none;
-  border: none;
+  border: 0;
   border-radius: 4px;
+  overflow: hidden;
+  user-select: none;
+  transition: all 0.15s linear;
   outline: 0;
   &.solid-primary {
 
@@ -21,6 +30,7 @@ button,
   }
   &.hollow-primary {
     height: 34px;
+    line-height: 30px;
     color: rgba(255,255,255,0.9);
     border: 2px solid rgba(255,255,255,0.9);
     transition: all 0.1s linear;
